data/derived/sp14/progs/unify/prog2417.ml.out
Characters 114-128:
  in listReverse (explodeNum n);;
                 ^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type 'a list list
       Type int is not compatible with type 'a list 
